# luna-whatsapp

./: .gitignore  .gitmodules  LICENSE  README.md  render.yaml
.cursor/rules/: ask-in-chat-not-popups.mdc  browser-control.mdc  caveman.mdc  fix-capability-not-prompt.mdc  local-servers.mdc  luna-service.mdc  no-inventing-remotes.mdc  plan-before-execute.mdc  plan-links.mdc  release.mdc  version-bump.mdc
gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
gateway/src/: accounts.js  config.js  db.js  hmac.js  inbound.js  index.js  outbox.js  session.js  stats.js  voice.js  wa.js
gateway/test/: gateway.test.mjs  outbox.test.mjs  voice.test.mjs
gateway/tools/: db_helper.mjs
plans/001-mvp-fit-fixes/: plan.md
plans/001-whatsapp-monitoring/: PLAN.md
plans/002-whatsapp-full-parity/: EXECUTION_REPORT.md  PLAN.md  luna-core-proposal.md  send_media.py  sim_inbound.py
plans/003-whatsapp-multiluna/: PLAN.md  execution-summary.md
plans/004-plugin-self-provision/: PLAN.md  execution-summary.md
plans/005-whatsapp-full-control/: execution-summary.md  luna-core-proposal.md
plans/006-anti-ban-send-discipline/: PLAN.md  execution-summary.md
plugin/: pyproject.toml
plugin/plugin_whatsapp/: __init__.py  client.py  context.py  db.py  hmac.py  luna-plugin.toml  policy.py  routes.py
plugin/tests/: conftest.py  test_context.py  test_hmac.py  test_manifest.py  test_policy.py
tests/dojo/: README.md  RESULTS.md  (+1 more)
vision/: architecture.md  codemap.md  communication.md  contract.md  luna-integration.md  roadmap.md  vision.md
(+17 files in other folders)
