[project]
name = "plugin-whatsapp"
version = "0.1.0"
description = "Connect Luna to WhatsApp via the luna-wa-gateway."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plugin_whatsapp"]
